<resources>
    <string name="app_name">BanKodemia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText1">¡Adiós a las complicaciones!</string>
    <string name="welcomeText2">Usa el dinero a <font fgcolor='#00CCCC'>TU</font> manera</string><!--green-->
    <string name="createAccount">Crear Cuenta</string>
    <string name="logintxt">Iniciar Sesión</string>
    <string name="addContacttxtbtn">Agregar Contacto</string>

    <string name="sendmoneytxt">ENVIAR DINERO</string>
    <string name="addContacttxt">AGREGAR CONTACTO</string>
    <string name="endAddContacttxt">Tu contacto fue agregado con éxito</string>
    <string name="backtomaintxtbtn">Volver a Inicio</string>
    <string name="clabetxtbtn">CLABE</string>
    <string name="clabetxttv">18 digitos</string>
    <string name="tarjetatxtbtn">Tarjeta</string>
    <string name="tarjetatxttv">No. de tarjeta</string>
    <string name="insttv">Institución</string>

    <string name="bk_logo">bk_logo</string>
    <string name="brieflogintxt">Escribe el correo y telefóno con el que te registraste, a través de estos te enviaremos el acceso</string>
    <string name="hintcorreo">Escribe tu correo</string>
    <string name="hintpwd">Escribe tu contraseña</string>
    <string name="helplogintxt">¿Necesitas ayuda? Escríbenos a</string>
    <string name="helpmailbk"><u>bankodemia@com.mx</u></string>
    <string name="briefcreateaccounttxt">Aquí recibirás comprobantes de tus movimientos e información sobre tu cuenta</string>
    <string name="privacyaccepttxt">Al tocar continuar aceptas nuestro</string>
    <string name="privacytermstxt"><u>Aviso de privacidad</u></string>


    <string name="errorlimitnumclabe">Verifique que sean 18 dígitos</string>
    <string name="errorlimitnumtarjeta">Verifique que sean 16 dígitos</string>
    <string name="conoce_c_mo">Conoce <font color="#7B78EA"><u>cómo protegemos tus documentos</u></font></string>
    <string name="documento_m">Documento Migratorio</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="seleccionado">Seleccionado el tipo de documento que deseas fotografiar</string>
    <string name="identidad">IDENTIDAD</string>
    <string name="ine">INE</string>
    <string name="dale_permis">Dale permiso a Bankodemia para utilizar la cámara. Asegúrate de tener buena luz y enfocar bien tu documento de frente.</string>
    <string name="subir_informacion">Subir Información</string>
    <string name="ahora_vamos">Ahora, vamos a verificar tu identidad para proteger tu cuenta.</string>
    <string name="deber_s_sub">Deberás subir una fotografía de tu INE o pasaporte vigente y tomarte una selfie. Si eres extranjero necesitarás una fotografía de tu documento migratorio (FM3)</string>
    <string name="entendido">Entendido</string>
    <string name="transferencia">TRANSFERENCIA</string>
    <string name="enviar_a">ENVIAR A</string>
    <string name="nombre_beneficiario">Cruz Eduardo Reveles Caldera</string>
    <string name="cuenta_banco">4915 1573 8890 4376 / BANORTE</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="spei_sin_co">SPEI sin costo</string>
    <string name="concepto_de">CONCEPTO DE PAGO</string>
    <string name="pago_croque">Pago croquetas gatos</string>
    <string name="hacertransferencia">Hacer Transferencia</string>
    <string name="concepto_de_pago">Concepto de pago</string>
    <string name="cantidad_pago">150</string>
    <string name="confirmacion">CONFIRMACIÓN DE TRANSFERENCIA</string>
    <string name="est_s_segur">¿Estás segura(o) que quieres realizar esta transacción?</string>
    <string name="aceptar">Aceptar</string>
    <string name="espera_un_m">Espera un momento, estamos procesando tu transacción</string>
    <string name="tu_transacc">Tu transacción ha sido finalizada</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="logosendinninfo">logoSendinnInfo</string>
    <string name="logoheader">logoheader</string>
    <string name="image_fly">image_Fly</string>
    <string name="info_Ready">¡Listo! Recibimos tu información. Usualmente tardamos unos minutos en verficar, pero en caso de tener algún problema, nos comunicaremos contigo.</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="thnks_bankodemia">¡Gracias por usar Bankodemia!</string>
    <string name="No_tarjeta">Nº Tarjeta</string>
    <string name="tarjeta">TARJETA</string>
    <string name="ingresa_tus_datos">INGRESA TUS DATOS</string>
    <string name="escr_belos_tal_como_aparecen_en_tu_identificaci_n_oficial_sin_abreviaturas">Escríbelos tal como aparecen en tu identificación oficial sin abreviaturas</string>
    <string name="esta_informaci_n_es_necesaria_para_verificar_tu_identidad_nunca_la_usaremos_sin_tu_consentimiento">Esta información es necesaria para verificar tu identidad.<font color="#7B78EA"> Nunca la usaremos sin tu consentimiento</font></string>
    <string name="continuar">Continuar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="contrase_a">Contraseña</string>
    <string name="la_usar_s_para_entrar_a_la_app_y_confirmar_tus_transacciones">La usarás para entrar a la app y confirmar tus transacciones</string>
    <string name="usa_al_menos_6_caracteres_alfanum_ricos_no_consecutivos_ni_repetidos">Usa al menos 6 caracteres alfanuméricos, no consecutivos ni repetidos</string>
    <string name="correo_de_notificaci_n">Correo de notificación</string>
    <string name="nombre">Nombre</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="app_name_bankodemia_with_kodemia_logo">app name bankodemia with kodemia logo</string>
    <string name="al_tocar">Al tocar continuar aceptas nuestro</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_s">Apellido(s)</string>
    <string name="ocupaci_n">Ocupación</string>
    <string name="bankodemia_logo">Bankodemia Logo</string>
    <string name="lo_usar_s_para_iniciar_sesi_n">Lo usarás para iniciar sesión</string>
    <string name="tu_n_mero_de_celular">Tu número de celular</string>
    <string name="para_protejer_tu_cuenta_te_enviaremos_un_c_digo_v_a_sms">Para protejer tu cuenta, te enviaremos un código vía SMS</string>
    <string name="crea_una_contrase_a_segura">Crea una contraseña segura</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="crear_contrase_a">Crear Contraseña</string>
    <string name="identitydocument">identityDocument</string>
    <string name="espera_un_momento_estamos_validando_tus_datos">Espera un momento, estamos validando tus datos</string>
    <string name="transaction_done">Transaction done</string>
    <string name="title_nav_servicios">SERVICIOS</string>
    <string name="title_nav_inicio">INICIO</string>
    <string name="title_nav_tarjeta">TARJETA</string>
    <string name="cuenta_emisora">CUENTA EMISORA</string>
    <string name="no_cuenta">Número de Cuenta</string>
    <string name="detalle_transaccion">DETALLE DE TRANSACCIÓN</string>
    <string name="id_transaccion">ID DE TRANSACCIÓN</string>
    <string name="concepto">CONCEPTO</string>
    <string name="fecha_hora">FECHA Y HORA</string>
    <string name="dinero_disponible">DINERO DISPONIBLE</string>
    <string name="enviar">Enviar</string>
    <string name="recibir">Recibir</string>
    <string name="moneyAvailable">$0.00</string>
    <string name="vigencia">Vigencia</string>
    <string name="cvv">CVV</string>
    <string name="telcel_at_t_movistar"><![CDATA[Telcel, AT&T, Movistar]]></string>
    <string name="internet_tv_tel_fono">Internet/TV/Teléfono</string>
    <string name="telmex_izzi_totalplay">Telmex, Izzi, TotalPlay</string>
    <string name="naturgy_y_compa_a_mexicana">Naturgy y Compañía Mexicana</string>
    <string name="gas">Gas</string>
    <string name="servicios">SERVICIOS</string>
    <string name="tarjetas_de_cr_dito">Tarjetas de crédito</string>
    <string name="tiendas_departamentales">Tiendas departamentales</string>
    <string name="liverpool_sears_palacio_de_hierro">Liverpool, Sears, Palacio de Hierro</string>
    <string name="fechaDetalle">21 de marzo de 2022, 9:00 p.m.</string>
    <string name="cantidadTransaccion">$110.00</string>
    <string name="Id_transaccion">HGB557489948Cd58574</string>
    <string name="conceptp">Renta Isabel</string>
    <string name="concepto_transaccion">Renta</string>
    <string name="numero_cuenta">**** 5892 87</string>
    <string name="numero_tarjeta_real">5439 2464 7664 2003</string>
    <string name="vigencia_real">11/26</string>
    <string name="CVV_real">125</string>
    <!--Errores-->
    <string name="requiredField">El campo es requerido</string>
    <string name="invalidMail">Correo inválido</string>
    <string name="pictureNotTaken">Se requiere tomar una foto para continuar.</string>
    <string name="userphonealreadyexists">Número teléfonico ya registrado, ingrese uno diferente</string>
    <string name="useralreadyexists">Email ya registrado, ingrese uno diferente</string>
    <string name="broken">Estas quebrado :(</string>
    <string name="serverError">Hubo un error, intente más tarde</string>
    <string name="insufficientFunds">Fondos insuficientes</string>
    <string name="invalidCredentials">No se pudo iniciar sesión. Usuario y/o contraseña incorrectas</string>
    <string name="mailIsAlreadyUsed">El correo ya esta registrado, intente con otro</string>
    <string name="phoneNumberNotValid">El número telefónico no es válido, intente con otro</string>
    <string name="_21_marzo_2022">21 marzo 2022</string>
    <string name="hubo_un_problema_al_realizar_tu_transacci_n">Hubo un problema al realizar tu transacción</string>
    <string name="error_name">El campo nombre es requerido</string>
    <string name="error_lastname">El campo apellido es requerido</string>
    <string name="error_occupation">El campo ocupación es requerido</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="plan_m_vil">Plan móvil</string>
    <string name="recarga_de_celular">Recarga de celular</string>
    <string name="transaction_concept">Fondeo Bienvenida</string>
    <string name="transaction_hour">6:39 p.m.</string>
    <string name="transaction_amount">500.00</string>
    <string name="user">user</string>
    <string name="help">help</string>
    <string name="card">card</string>
    <string name="mastercard">mastercard</string>
    <string name="bankodemia">bankodemia</string>
    <string name="banks">BBVA, Santander, Banorte, Banamex</string>


</resources>
