<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.Ok_infoFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image_header_okInfo"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logoheader"
            android:src="@drawable/bk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageFly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/image_fly"
        android:src="@drawable/bkfly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_header_okInfo" />

    <TextView
        android:id="@+id/textView_infoReady"
        android:layout_width="329dp"
        android:layout_height="101dp"
        android:layout_marginTop="44dp"
        android:text="@string/info_Ready"
        style="@style/boldTitle"
        app:layout_constraintEnd_toEndOf="@+id/imageFly"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageFly"
        app:layout_constraintTop_toBottomOf="@+id/imageFly" />

    <TextView
        android:id="@+id/tv_thnksBnkodemia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/thnks_bankodemia"
        android:textAllCaps="true"
        android:textColor="#7B78EA"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_infoReady" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_backToLogin"
        style="@style/button"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/volver_al_inicio"
        app:layout_constraintEnd_toEndOf="@+id/textView_infoReady"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/textView_infoReady"
        app:layout_constraintTop_toBottomOf="@+id/tv_thnksBnkodemia" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>