<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SubirDocumentoIdentidad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_atras"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins2"
                android:text="@string/ine"
                android:textColor="#626262"
                android:textSize="14sp"
                app:icon="@drawable/ic_baseline_arrow_back"
                app:iconTint="#626262"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_bk_image" />

            <ImageView
                android:id="@+id/iv_bk_image"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/bankodemia_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bk" />

            <ImageView
                android:id="@+id/iv_doc_id"
                android:layout_width="368dp"
                android:layout_height="270dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/identitydocument"
                android:src="@drawable/img_subir_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dale_permiso" />

            <TextView
                android:id="@+id/tv_dale_permiso"
                style="@style/boldTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/dale_permis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_atras" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tomar_foto"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tomar_foto"
                app:icon="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_doc_id" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subir_informacion"
                style="@style/button"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/subir_informacion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_tomar_foto"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>