<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="view.SeleccionarDocumentoIdentidad">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_bk_image"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bk"
            android:contentDescription="@string/bankodemia_logo" />

        <Button
            android:id="@+id/btn_atras"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/identidad"
            android:textColor="#626262"
            app:icon="@drawable/ic_baseline_arrow_back"
            android:textSize="14sp"
            app:iconTint="#626262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_bk_image" />

        <TextView
            android:id="@+id/tv_dale_permiso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            style="@style/boldTitle"
            android:text="@string/seleccionado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_atras" />

        <TextView
            android:id="@+id/ine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/ine"
            style="@style/singleTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dale_permiso" />

        <Button
            android:id="@+id/btn_INE"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/ic_baseline_arrow_forward"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ine" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/documento_m"
            style="@style/singleTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ine" />

        <Button
            android:id="@+id/btn_DocMig"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/ic_baseline_arrow_forward"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/pasaporte"
            style="@style/singleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/pasaporte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_Pasaporte"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/ic_baseline_arrow_forward"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pasaporte" />

        <TextView
            android:id="@+id/conoce_c_mo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:gravity="center_horizontal|top"
            android:text="@string/conoce_c_mo"
            style="@style/singleTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>