<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".endAddContact">

    <ImageView
        android:id="@+id/imageView_bk"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bk_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bk" />


    <ImageView
        android:id="@+id/iv_endContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@null"
        android:src="@drawable/contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_bk"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/endAddContacttxt"
        android:textColor="@color/black2"
        app:layout_constraintEnd_toEndOf="@+id/iv_endContact"
        app:layout_constraintStart_toStartOf="@+id/iv_endContact"
        app:layout_constraintTop_toBottomOf="@+id/iv_endContact" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/backtomaintxtbtn"
        android:textSize="16sp"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"/>


</androidx.constraintlayout.widget.ConstraintLayout>